--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -1,13 +1,13 @@
-; This file is the display text dictionary of the ContextMenuManager program, and the newline characters in the dictionary are escaped with \r\n or \n
-; If you want to help the author add other language dictionaries to this program, you can modify this text and save it in the .\config\languages folder,
+;This file is the display text dictionary of the ContextMenuManager program, and the newline characters in the dictionary are escaped with \r\n or \n
+;If you want to help the author add other language dictionaries to this program, you can modify this text and save it in the .\config\languages folder,
 ;For example, save the American English dictionary as en-US.ini, and assign en-US English to [General]\Language
 ;Fork the project on Github or Gitee and submit an application to me, or send the file directly to the mailbox 1617859183@qq.com 
 
 [General]
 AppName = Windows Context Menu Manager
 Language = en-US English
-Translator = mimmiepower (Google Translate) \r\n Geoff B.
-TranslatorUrl = https://github.com/mimmiechan \r\n https://github.com/geoff-B
+Translator = mimmiepower (Google Translate) \r\n Geoff B. \n Jing
+TranslatorUrl = https://github.com/mimmiechan \r\n https://github.com/geoff-B \r\n https://github.com/delgh1
 
 [ToolBar]
 Home = Home
@@ -39,6 +39,7 @@ CustomExtension = Specific file type
 PerceivedType = Perceived file type
 DirectoryType = Folder type
 UnknownType = Unknown file type
+MenuAnalysis = Menu Analysis
 
 EnhanceMenu = Menu ehancements
 DetailedEdit = Third-party rules
@@ -50,6 +51,7 @@ IEMenu = IE context menu
 
 AppSetting = Settings
 AppLanguage = Language
+CheckUpdate = Check Update
 Dictionaries = Program folder
 AboutApp = Software information
 Donate = Donate to the author
@@ -77,31 +79,34 @@ CustomExtension = Customize the context menu for any file type
 PerceivedType = Customize the context menu for the specified perceived file
 DirectoryType = Customize the context menu for the specified folder type
 UnknownType = Context menu for file with a file type that are not associated with any app
+MenuAnalysis = Analyze the context menu location
 
 EnhanceMenu = Add some useful menu items
 DetailedEdit = Part of the internal menu setting rules of third-party programs included in the program dictionary
 DragDrop = Menu item when right-clicking and dragging a file
 PublicReferences = Edit the Shell type sub-menu items of public references added by users
+CustomRegPath = Costomize the context menu registry path
 GuidBlocked = Suitable for stubborn ShellEx projects that rely on GUIDs (some GUIDs are disabled)
-IEMenu = Context menu for Internet Explorer web pages
+IEMenu = Context menu in Internet Explorer
 
 [Menu]
 ChangeText = Rename
 ItemIcon = Item icon
 ChangeIcon = Change icon
+ShieldIcon = Shield icon
 AddIcon = Add icon
 DeleteIcon = Delete icon
 ItemPosition = Item location
 SetDefault = Default
 SetTop = Put on top
 SetBottom = Put on the bottom
-OtherAttributes = Other Attributes
-OnlyWithShift = Show only after pressing Shift
+OtherAttributes = Other properties
+OnlyWithShift = Show only while holding Shift
 OnlyInExplorer = Show only in File Explorer
 NoWorkingDirectory = Do not use the folder information in the context menu
 NeverDefault = Never use the left button to execute commands by default
 ShowAsDisabledIfHidden = If item is deactivated, gray out instead of hiding it
-Details = Detailed information
+Details = Details
 WebSearch = Web search
 ChangeCommand = Change command
 RunAsAdministrator = Run as administrator
@@ -114,6 +119,7 @@ DeleteReference = Delete reference
 HandleGuid = GUID actions
 CopyGuid = Copy GUID
 BlockGuid = Block GUID
+ClsidLocation = CLSID location
 AddGuidDic = Add GUID dictionary
 InitialData = Edit file initial data
 BeforeSeparator = Displayed above the separator
@@ -121,21 +127,26 @@ ChangeGroup = Change group
 RestoreDefault = Restore default
 Edit = Edit
 Save = Save
+FoldAll = Fold all
+UnfoldAll = Unfold all
 
 [Dialog]
 Browse = Browse
 Program = Program
+AllFiles = All files
 RegistryFile = Registry file
 ItemText = Item text
 ItemCommand = Menu command
 CommandArguments = Command arguments
-SingleMenu = Single level
-MultiMenu = Multi-level
+SingleMenu = Single-level menu
+MultiMenu = Multi-level menu
 Public = Public
 Private = Private
+SelectAll = Select all
 InputGuid = Enter GUID local dictionary
 AddGuidDic = Add GUID local dictionary
-DeleteGuidDic = Delete
+DeleteGuidDic = Delete GUID dictionary
+NoPerceivedType = Type unknown
 TextFile = Text file
 DocumentFile = Document file
 ImageFile = Image file
@@ -148,41 +159,59 @@ ImageDirectory = Image folder
 VideoDirectory = Video folder
 AudioDirectory = Audio folder
 EditSubItems = Edit sub-menu items for "%s"
+DetailedEdit = Edit "%s" in detail
 CheckReference = Check the menu item to which you want to add a reference to
-CheckCommon = Check the common menu items you want to add
 CheckCopy = Check the menu item you want to copy
 SelectExtension = Please select a file extension
 SelectPerceivedType = Please select a perceived file type
 SelectDirectoryType = Please select a perceived folder type
 SelectGroup = Select to save the group
-DownloadLanguages = Download languages
+SelectNewItemType = Select "New" item type
+SelectObjectType = Select object type to analyze
+SelectDropEffect = Select default drop effect
+DefaultDropEffect = Default(move in the same drive、copy from a different drive)
+CopyDropEffect = Copy(Ctrl)
+MoveDropEffect = Move(Shift)
+CreateLinkDropEffect = Create shortcuts(Alt)
+DownloadLanguages = Download multi-language files
+TranslateTool = Translation tool
+DefaultText = Default text
+OldTranslation = Old translation
+NewTranslation = New translation
+DonateInfo = This list is updated once in a while，last update: %date \r\n\r\nTotal: %money Yuan, %count people
 
 [Message]
 TextCannotBeEmpty = Menu text cannot be empty!
 CommandCannotBeEmpty = Menu command cannot be empty!
 StringParsingFailed = Localized string parsing failed!
-TextLengthCannotExceed80 = Menu text is too long. The length cannot exceed 80!
+TextLengthCannotExceed80 = Menu text you entered is too long. The length cannot exceed 80 characters!
 ConfirmDeletePermanently = Are you sure you want to permanently delete this item? \r\n Be careful, this operation cannot be undone!
 DeleteButCanRestore = Are you sure you want to delete the registry item of this menu? \r\n Since automatic backup is enabled (enabled by default),\r\n it can be restored from the backup folder after deletion.
 ConfirmDeleteReference = Are you sure you want to delete this item? \r\n Be careful, all items referencing this item will become invalid!
 ConfirmDelete = Are you sure you want to delete this item?
 ConfirmDeleteReferenced = Are you sure you want to permanently delete this item? \r\n Please note that all items referencing this item will be invalid.
 CannotAddNewItem = Cannot add! The system limits the maximum number of sub-menu items to 16.
+VistaUnsupportedMulti = Windows Vista does not support multi-level menu!
+CannotHideSubItem = Your version of Windows does not support hiding subitems!
 UnsupportedFilename = Unsupported filename. \r\n A menu item with the same filename may already exist!
-UnsupportedExtension = Unsupported file extension!
 NoOpenModeExtension = There is no app associated with this extension. \r\n Right-click a file of this type with this extension to associate it with an app!
 CannotChangePath = File path changes are not allowed!
-CopiedToClipboard = Copy to clipboard:
+CopiedToClipboard = Copied to clipboard:
 MalformedGuid = GUID with incorrect format
-UnknownGuid = Unknown GUID!
 HasBeenAdded = This item has been added!
 SelectSubMenuMode = The number of sub-items in the current multi-level menu is 0. There are two choices: \r\n ① All sub-menu items in this multi-level menu are private (recommended),\r\n ② The multi-level menu can reference the same sub-items as other multi-level menus. \r\n Demanding choice...
 EditInitialData = This program currently only supports editing the initial data of plain text files (.txt, .bat, etc.).\r\n For other types of files, please edit the registry "Data" key value by yourself.\r\n Confirm if you want to continue the operation.
 PromptIsOpenItem = This item has an "Open" menu,\r\n Blind operations may prevent you from opening files and folders,\r\n Confirm if you want to continue the operation. (Not recommended)
+SelectRegPath = Steps: \r\n1. Open Registry Editor\r\n2. Navigate to target path\r\n3. Close the Registry Editor\nContinue?
 RestartApp = The program will restart!
 FileNotExists = The file does not exist!
 FolderNotExists = The folder does not exist!
+UpdateInfo = A newer version is available\r\nCurrent version%v1\r\nLatest version%v2\r\nDo you want to update to the latest version?
+UpdateSucceeded = Update succeeded!
+DicUpdateSucceeded = Dictionaries and multi-language files are updated.
 VersionIsLatest = The current version is the latest.
+WebDataReadFailed = Failed to fetch data from the Internet.
+OpenWebUrl = Open the URL?
 AuthorityProtection = This menu registry item may be protected by security software.\r\n It cannot be disabled, deleted, and other personalized modifications.
 WinXSorted = Some items have been renumbered in order to optimize the sorting function.\r\n You need to restart File Explorer before changes take effect
 RestoreDefault = Confirm to restore to the default menu item.
@@ -195,63 +224,67 @@ SendToDrive = Only works if a removable disk is connected.\r\n Displays all part
 BuildSendtoMenu = Disabling this option will speed up the pop-up speed of the main menu \r\n but will slow down the pop-up speed of the "Send to" sub-menu
 InvalidItem = If a menu item is invalid, all menu items \r\n under this item will be hidden (deletion recommended).
 EditSubItems = Edit sub-menu Items
-AddExistingItems = Add references to existing projects
 AddReference = Add reference from public reference project
+AddFromPublic = Copy item from public
 AddFromParentMenu = Copy item from parent menu
-AddSeparator = Add seperator
+AddSeparator = Add a seperator
 DeleteGuidDic = Delete the local GUID dictionary added by the user
 LockNewMenu = Once enabled, it can prevent third-party programs from adding items \r\n and can sort existing items (close and restore)
+DropOrSelectObject = Drop or select an object
 ConfigPath = After changing the configuration and data file save path, \r\n some of the enhanced menus that have been enabled will become invalid.\r\n They can be re-enabled in the enhanced menu
 CommandFiles = This command depends on the configuration file. Moving the configuration file location will cause this menu item to become invalid. Re-enable it.
 CreateGroup = Create a new group
+ImmediatelyCheck = Check now
 
 [Other]
-Open = &Open
-Edit = &Edit
-Explore = E&xplorer
-Play = P&lay
-Print = &Print
-Find = Find(&E)...
-Runas = Run as &administrator
 CustomFolder = Customize this &folder...
-MapNetworkDrive = Map &Network Drive...
-DisconnectNetworkDrive = Disconnect Network Drive(&C) ...
-RecycleBinProperties = Properties(&R)
-RemovableDrive = Removable Disk
 BuildSendtoMenu = Create "Send to" submenu
-UseStoreOpenWith = Find apps in Microsoft Store
-ShareWithSkype = Share using Skype
 NewItem = Create new menu item
 AddGuidBlockedItem = Add GUID blocked item
 LockNewMenu = Lock the new menu
 InvalidItem = Invalid menu item:
 Separator = >>>>>> Separator <<<<<<
+SelectRegPath = 请选择注册表项
 CurrentExtension = The currently selected file extension is %s
 CurrentPerceivedType = The currently selected perceived file type is %s
 CurrentDirectoryType = The currently selected perceived folder type is %s
-RestartExplorer = Explorer must be restarted for the changes to take effect.
+CurrentFilePath = Current file path: 
+CurrentRegPath = Current registry path:
+WinXSortable = Enable Win+X menu sorting
+ShowFilePath = Show file path in the status bar
+OpenMoreRegedit = Open Registry Editor in a separate window
+OpenMoreExplorer = Open File Explorer in a separate window
+RestartExplorer = Windows Explorer must be restarted for the changes to take effect.
+SwitchDictionaries = Switch dictionary
+WebDictionaries = Web dictionaries
+UserDictionaries = User dictionaries
 DictionaryDescription = Dictionary description
-LanguageDictionary = Language
 GuidInfosDictionary = GUID information
-ThridRulesDictionary = Third-party rules
-CommonItemsDictionary = Common Menu
+UwpMode = UWP Modules
 Translators = Translators
 DonationList = Donation list
 ConfigPath = Save location of configuration and data files
-AppDataDir = AppData directory
+AppDataDir = AppData
 AppDir = Program directory
 AutoBackup = Automatically back up the registry when deleting menus
-ImmediatelyCheck = Check now
+SetUpdateFrequency = How often to check update
+OnceAWeek = Once a week
+OnceAMonth = Once a month
+OnceASeason = Once every three months
+NeverCheck = Never
+SetRequestRepo = Request Repo
 ProtectOpenItem = Protect the "Open" menu item
 WebSearchEngine = Search engine used for web searches
-CustomEngine = Custom
+CustomEngine = Custom...
 SetCustomEngine = Define search engine (use %s instead of search keywords) 
-WinXSortable = Enable WinX menu sorting function
-ShowFilePath = Show file path of item in status bar on hover
-OpenMoreRegedit = Allow the registry editor to open more
+HideDisabledItems = Hide disabled items
+HideSysStoreItems = Hide system store items
+SetPerceivedType = Set %s perceived type...
+SetDefaultDropEffect = Set default drop effect
+TopMost = Always on top
 
-AboutApp = [Main function] \r\n 1 = Manage common location context menu \r\n 2 = Customize and add context menu \r\n\r\n [Compatibility] \r\n 1. Suitable for Win10, 8.1, 8, 7, Vista \r\n 2 = Suitable For 64bit, 32bit CPU operating system \r\n 3 = Adapt to high resolution screens, the best zoom ratio is 150% \r\n\r\n [Open source code] \r\n  1 = Code language: C Sharp, Winform program, MIT License \r\n 2 = GitHub project: https://github.com/BluePointLilac/ContextMenuManager \r\n 3 = Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n [Warm Tips] \r\n 1 = Some special menu items may be affected by other factors, they will not be displayed in the context menu. \r\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal. \r\n 2 = The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time. \r\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible. \r\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program. \r\n 3 = This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items. \r\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable\disable switch. 
+AboutApp = [Compatiblity] \r\n 1 = Compatible with Win10、8.1、8、7、Vista \r\n 2 = Compatible with 64bit、32bit OS\r\n 3 = High DPI compatible, optimal with 150%\r\n\r\n[Open source]\r\n 1 = Programming languages: C sharp，Winform，MIT License\r\n 2 = Github repo：https://github.com/BluePointLilac/ContextMenuManager \r\n 3 = Gitee repo：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n[Hints]\r\n 1 = This program reads/writes a large amount of system files and registry entries,\r\n it may be flagged by Windows Defender as these operations are highly sensitive, please manually add this program to the exclusion list\r\n\r\n 2 = Some special menu items may be affected by other factors, they may not be displayed in the context menu. \r\n However, they may still be displayed as enabled in this program according to the general rules used by the program. This is normal. \r\n\r\n 3 = The method of disabling the menu for each context menu management program may be different. Do not use multiple context menu management programs at the same time. \r\n Most programs use a simple and volatile backup-delete method. This program uses the key values ​​provided by the OS to hide keys as much as possible. \r\n If you have used other programs to disable an menu item before, please use that program to restore it, otherwise you may not be able to see it in this program. \r\n\r\n 4 = This program is not designed to clean up programs that have been uninstalled, but it can help you locate the registry and file locations of such menu items.\r\n You can do what ever you want. If you are just a newbie (or unsure about some options), toggle the enable\disable switch only (to reduce the risk of corrupting the OS). 
 
 Dictionaries = [Dictionary description] \r\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary. \r\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it. \r\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project. \r\n The right tab is the original dictionary content, you can switch the tab to view it \r\n\r\n[Dictionary content]\n 1 = Program display text language dictionary (Languages directory) \r\n 2 = ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini) \r\n 3 = Third-party program menu internal setting dictionary (DetailedEditDic.xml) \r\n 4 = Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
 
-Donate = This program is completely free. If you find this software helpful,\r\n you can donate by scanning the QR code below (WeChat, Alipay, Tencent QQ).\r\n The amount is up to you. Thank you for your support! I also hope you consider \r\n starring this program's project on Github or Gitee (this means a lot to me!).
+Donate = This program is completely free. If you find this software helpful,\r\n you can donate by scanning the QR code below (WeChat, Alipay, Tencent QQ).\r\n The amount is up to you. Thank you for your support! I also hope you consider \r\n starring this project on Github or Gitee (this means a lot to me!).
