Update en-US and ja-JP to 3.3.3.0

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -45,7 +45,7 @@ EnhanceMenu = Menu ehancements
 DetailedEdit = Third-party rules
 DragDrop = Right-click and drag
 PublicReferences = Public references
-CustomType = Specific type
+CustomRegPath = Custom registry path
 GuidBlocked = GUID blocked
 IEMenu = IE context menu
 
@@ -244,7 +244,7 @@ AddGuidBlockedItem = Add GUID blocked item
 LockNewMenu = Lock the new menu
 InvalidItem = Invalid menu item:
 Separator = >>>>>> Separator <<<<<<
-SelectRegPath = 请选择注册表项
+SelectRegPath = Select a registry path
 CurrentExtension = The currently selected file extension is %s
 CurrentPerceivedType = The currently selected perceived file type is %s
 CurrentDirectoryType = The currently selected perceived folder type is %s
@@ -283,7 +283,7 @@ SetPerceivedType = Set %s perceived type...
 SetDefaultDropEffect = Set default drop effect
 TopMost = Always on top
 
-AboutApp = [Compatiblity] \r\n 1 = Compatible with Win10、8.1、8、7、Vista \r\n 2 = Compatible with 64bit、32bit OS\r\n 3 = High DPI compatible, optimal with 150%\r\n\r\n[Open source]\r\n 1 = Programming languages: C sharp，Winform，MIT License\r\n 2 = Github repo：https://github.com/BluePointLilac/ContextMenuManager \r\n 3 = Gitee repo：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n[Hints]\r\n 1 = This program reads/writes a large amount of system files and registry entries,\r\n it may be flagged by Windows Defender as these operations are highly sensitive, please manually add this program to the exclusion list\r\n\r\n 2 = Some special menu items may be affected by other factors, they may not be displayed in the context menu. \r\n However, they may still be displayed as enabled in this program according to the general rules used by the program. This is normal. \r\n\r\n 3 = The method of disabling the menu for each context menu management program may be different. Do not use multiple context menu management programs at the same time. \r\n Most programs use a simple and volatile backup-delete method. This program uses the key values ​​provided by the OS to hide keys as much as possible. \r\n If you have used other programs to disable an menu item before, please use that program to restore it, otherwise you may not be able to see it in this program. \r\n\r\n 4 = This program is not designed to clean up programs that have been uninstalled, but it can help you locate the registry and file locations of such menu items.\r\n You can do what ever you want. If you are just a newbie (or unsure about some options), toggle the enable\disable switch only (to reduce the risk of corrupting the OS). 
+AboutApp = [Compatiblity] \r\n 1 = Compatible with Win10、8.1、8、7、Vista \r\n 2 = Compatible with 64bit、32bit OS\r\n 3 = High DPI compatible, optimal with 150%\r\n\r\n[Open source]\r\n 1 = Programming languages: C sharp，Winform，MIT License\r\n 2 = Github repo：https://github.com/BluePointLilac/ContextMenuManager \r\n 3 = Gitee repo：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n[Hints]\r\n 1 = This program reads/writes a large amount of system files and registry entries,\r\n it may be flagged by Windows Defender as these operations are highly sensitive, please manually add this program to the exclusion list\r\n\r\n 2 = Some special menu items may be affected by other factors, they may not be displayed in the context menu. \r\n However, they may still be displayed as enabled in this program according to the general rules used by the program. This is normal. \r\n\r\n 3 = The method of disabling the menu for each context menu management program may be different. Do not use multiple context menu management programs at the same time. \r\n Most programs use a simple and volatile backup-delete method. This program uses the key values ​​provided by the OS to hide keys as much as possible. \r\n If you have used other programs to disable an menu item before, please use that program to restore it, otherwise you may not be able to see it in this program. \r\n\r\n 4 = This program is not designed to clean up programs that have been uninstalled, but it can help you locate the registry and file locations of such menu items.\r\n You can do whatever you want. If you are just a newbie (or unsure about some options), toggle the enable\disable switch only (to reduce the risk of corrupting the OS). 
 
 Dictionaries = [Dictionary description] \r\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary. \r\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it. \r\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project. \r\n The right tab is the original dictionary content, you can switch the tab to view it \r\n\r\n[Dictionary content]\n 1 = Program display text language dictionary (Languages directory) \r\n 2 = ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini) \r\n 3 = Third-party program menu internal setting dictionary (DetailedEditDic.xml) \r\n 4 = Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
 
