更新语言，新增俄语

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -6,7 +6,7 @@
 [General]
 AppName = Windows Context Menu Manager
 Language = en-US English
-Translator = mimmiepower (Google Translate) \r\n Geoff B. \n Jing
+Translator = mimmiepower (Google Translate) \r\n Geoff B. \r\n Jing
 TranslatorUrl = https://github.com/mimmiechan \r\n https://github.com/geoff-B \r\n https://github.com/delgh1
 
 [ToolBar]
@@ -42,8 +42,8 @@ UnknownType = Unknown file type
 MenuAnalysis = Menu Analysis
 
 EnhanceMenu = Menu ehancements
-DetailedEdit = Third-party rules
-DragDrop = Right-click and drag
+DetailedEdit = Detailed editing
+DragDrop = Drag drop
 PublicReferences = Public references
 CustomRegPath = Custom registry path
 GuidBlocked = GUID blocked
@@ -82,7 +82,7 @@ UnknownType = Context menu for file with a file type that are not associated wit
 MenuAnalysis = Analyze the context menu location
 
 EnhanceMenu = Add some useful menu items
-DetailedEdit = Part of the internal menu setting rules of third-party programs included in the program dictionary
+DetailedEdit = Detailed setting rules for the internal menus of the system and other programs
 DragDrop = Menu item when right-clicking and dragging a file
 PublicReferences = Edit the Shell type sub-menu items of public references added by users
 CustomRegPath = Costomize the context menu registry path
