--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -6,7 +6,7 @@
 [General]
 AppName = Windows 右クリックメニュー管理
 Language = ja-JP 日本語
-Translator = 夕綺Yuuki \n Jing
+Translator = 夕綺Yuuki \r\n Jing
 TranslatorUrl = https://github.com/JDYuuki \r\n https://github.com/delgh1
 
 [ToolBar]
@@ -45,7 +45,7 @@ EnhanceMenu = メニュを強化する
 DetailedEdit = 詳細情報を編集する
 DragDrop = 右クリックしてドラッグ
 PublicReferences = 公共レファレンス
-CustomRegPath = 自选路径
+CustomRegPath = カスタムレジストリパス
 GuidBlocked = GUIDブロック
 IEMenu = IE 右クリックメニュー
 
