--- a/languages/zh-TW.ini
+++ b/languages/zh-TW.ini
@@ -43,7 +43,7 @@ UnknownType = 未知格式
 MenuAnalysis = 選單分析
 
 EnhanceMenu = 增強選單
-DetailedEdit = 第三方規則
+DetailedEdit = 詳細編輯
 DragDrop = 右鍵拖曳
 PublicReferences = 公共引用
 CustomRegPath = 自選路徑
@@ -83,7 +83,7 @@ UnknownType = 所有未關聯開啟檔案的格式檔案的右鍵選單
 MenuAnalysis = 分析指定檔案物件所有的右鍵選單所在位置
 
 EnhanceMenu = 新增一些有用的選單項目
-DetailedEdit = 程式字典內收錄的部分第三方程式內部選單設定規則
+DetailedEdit = 編輯自定義註冊表路徑的右鍵菜單項目
 DragDrop = 右鍵拖曳檔案時的選單項目
 PublicReferences = 編輯使用者新增的公共引用的Shell類型子選單項目
 CustomRegPath = 編輯自訂註冊表路徑的右鍵選單項目
